# command-line-text-editor

./: CMakeLists.txt  README.md
include/: console.h  console_text_editor.h  text_editor.h  utility.h
src/: console.cpp  console.h  console_text_editor.cpp  console_text_editor.h  main.cpp  text_editor.cpp  text_editor.h
